scripts for last panels

--- a/ot_imaging_analysis/v04 - analyze indexes for all fish.ipynb
+++ b/ot_imaging_analysis/v04 - analyze indexes for all fish.ipynb
@@ -59,7 +59,7 @@
    "source": [
     "\n",
     "\n",
-    "pooled_data[\"fid\"] = pooled_data[\"cid\"].apply(fix_fid)\n",
+    "# pooled_data[\"fid\"] = pooled_data[\"cid\"].apply(fix_fid)\n",
     "path_list = [f.parent for f in master_path.glob(\"*/data_from_suite2p_unfiltered.h5\")]"
    ]
   },
@@ -68,7 +68,57 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data = fl.load(path_list[0] / \"cell_resps.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = fl.load(path / \"cell_resps.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for path in tqdm(path_list[:1]):\n",
+    "    k = path.name\n",
+    "    exp = EmbeddedExperiment(path)\n",
+    "    gen = [\"abl\", \"cnt\"][(int(k.split(\"_f\")[1]) % 2)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gen = exp[\"general\"][\"animal\"][\"genotype\"]  # long genotype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = fl.load(path / \"cell_df.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[0, \"gen\"]"
+   ]
   },
   {
    "cell_type": "code",
@@ -119,8 +169,6 @@
     "    \n",
     "full_df = pd.concat(df_list, axis=0)\n",
     "full_df = full_df.set_index(full_df[\"cid\"])\n",
-    "\n",
-    "# Exclude bad fish:\n",
     "\n",
     "exp_df = pd.DataFrame(exp_df)\n",
     "exp_df = exp_df.set_index(\"fid\")"
@@ -349,8 +397,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "popt = []\n",
     "pcov = []\n",
