--- a/ot_imaging_analysis/v04 - center_of_mask.ipynb
+++ b/ot_imaging_analysis/v04 - center_of_mask.ipynb
@@ -55,6 +55,145 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "all_coords = []\n",
+    "for p in path_list:\n",
+    "    coords = fl.load(p/ \"data_from_suite2p_unfiltered.h5\", \"/coords\")\n",
+    "    \n",
+    "    coords -= all_offsets[p.name]\n",
+    "    \n",
+    "    all_coords.append(coords)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_masks = [fl.load(p/ \"anatomy.mask\", \"/mask\") for p in path_list]\n",
+    "# all_coords = [fl.load(p/ \"data_from_suite2p_unfiltered.h5\", \"/coords\") for p in path_list]\n",
+    "all_offsets = fl.load(master_path / \"manual_alignment_offsets.h5\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_df = fl.load(master_path / \"pooled_dfs.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_df = all_df[\"all_cells_df\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure()\n",
+    "plt.subplot(121)\n",
+    "sel = all_df[\"max_rel\"] > 0.5\n",
+    "plt.scatter(all_df.loc[sel, \"x\"], all_df.loc[sel, \"y\"], s=0.1, alpha=0.1, c=all_df.loc[sel, \"max_rel\"])\n",
+    "plt.axis(\"equal\")\n",
+    "\n",
+    "plt.subplot(122)\n",
+    "plt.scatter(all_df.loc[sel, \"x_trasf\"], all_df.loc[sel, \"y_trasf\"], s=0.1, alpha=0.1, \n",
+    "            c=all_df.loc[sel, \"max_rel\"])\n",
+    "plt.axis(\"equal\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(9, 2.5))\n",
+    "plt.subplot(131)\n",
+    "for m, c in zip(all_masks, all_coords):\n",
+    "    prof = m.max(1)\n",
+    "    plt.scatter(c[:, 1], c[:, 2], s=0.1, alpha=0.01, c=\"k\")\n",
+    "plt.axis(\"off\")\n",
+    "    \n",
+    "plt.subplot(132)\n",
+    "for m, c in zip(all_masks, all_coords):\n",
+    "    prof = m.max(0)\n",
+    "    #prof = pro\n",
+    "    x = prof.shape[0] // 2\n",
+    "    y = prof.shape[1] // 2\n",
+    "    plt.scatter(c[:, 1] - x, c[:, 2] - y, s=0.1, alpha=0.01, c=\"k\")\n",
+    "plt.axis(\"off\")\n",
+    "\n",
+    "plt.subplot(133)\n",
+    "for m, c, p in zip(all_masks, all_coords, path_list):\n",
+    "    prof = m.max(1)\n",
+    "    #prof = pro\n",
+    "    x, y = all_offsets[p.name][1:]\n",
+    "    plt.scatter(c[:, 1] - x, c[:, 2] - y, s=0.1, alpha=0.01, c=\"k\")\n",
+    "plt.axis(\"off\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(9, 2.5))\n",
+    "plt.subplot(131)\n",
+    "for m, c in zip(all_masks, all_coords):\n",
+    "    offsets_z = np.random.rand(c.shape[0])*15\n",
+    "    plt.scatter(c[:, 1], c[:, 0] + offsets_z, s=0.1, alpha=0.01, c=\"k\")\n",
+    "plt.axis(\"off\")\n",
+    "    \n",
+    "plt.subplot(132)\n",
+    "for m, c in zip(all_masks, all_coords):\n",
+    "    prof = m.max(2)\n",
+    "    offsets_z = np.random.rand(c.shape[0])*15\n",
+    "    x = prof.shape[0] // 2\n",
+    "    y = prof.shape[1] // 2\n",
+    "    plt.scatter(c[:,1] - y, c[:, 0] - x + offsets_z, s=0.1, alpha=0.01, c=\"k\")\n",
+    "plt.axis(\"off\")\n",
+    "\n",
+    "plt.subplot(133)\n",
+    "for m, c, p in zip(all_masks, all_coords, path_list):\n",
+    "    offsets_z = np.random.rand(c.shape[0])*15\n",
+    "    x, y = all_offsets[p.name][:-1]\n",
+    "    plt.scatter(c[:, 1] - y, c[:, 0] - x + offsets_z, s=0.1, alpha=0.01, c=\"k\")\n",
+    "plt.axis(\"off\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_masks = np.array(all_masks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Load traces and experiment metadata:\n",
     "path = master_path / \"210611_f5\"\n",
     "traces = fl.load(path / \"data_from_suite2p_unfiltered.h5\", \"/traces\").T\n",
@@ -81,6 +220,25 @@
    "outputs": [],
    "source": [
     "cells_df = fl.load(path / \"cell_df.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cells_df.loc[:, [f\"rel_{i}\" for i in range(len(pos))]].values.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure()\n",
+    "plt.scatter(cells_df.loc[:, [f\"rel_{i}\" for i in range(len(pos))]].values.T.flatten(), rel_scores.flatten())"
    ]
   },
   {
@@ -138,12 +296,30 @@
    "source": [
     "pooled_data = fl.load(master_path / \"pooled_dfs.h5\", \"/all_cells_df\")\n",
     "all_responses = pooled_data.loc[:, [f\"rel_{i}\" for i in range(35)]].values.T\n",
-    "all_coords = pooled_data.loc[:, [\"z_trasf\", \"x_trasf\", \"y_trasf\"]].values\n",
+    "all_coords = pooled_data.loc[:, [\"z\", \"x\", \"y\"]].values\n",
     "all_in_tectum = pooled_data[\"in_tectum\"].values\n",
     "\n",
     "responsive = all_responses.max(0) > 0.5\n",
     "all_peaks = np.argmax(all_responses, 0)\n",
-    "stim_thetas = np.array(pos)\n"
+    "stim_thetas = np.array(pos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sum(responsive)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sum(all_in_tectum)"
    ]
   },
   {
@@ -159,44 +335,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_df = pooled_data\n",
-    "exp_df = fl.load(master_path / \"pooled_dfs.h5\", \"/exp_df\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "old_data = fl.load(master_path / \"pooled_resps.h5\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sum([k[\"amp_scores\"].shape[1] for _, k in old_data.items()][1:])*2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "exp_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# all_coords = fl.load(master_path / \"pooled_dfs.h5\", \"/all_cells_df\")"
+    "pooled_data[\"fid\"] = pooled_data[\"cid\"].apply(fix_fid)\n",
+    "\n",
+    "REL_SCORE_THR = 0.5\n",
+    "\n",
+    "exp_df = []\n",
+    "df_list = []\n",
+    "for path in tqdm(path_list):\n",
+    "    k = path.name\n",
+    "    data = fl.load(path / \"cell_resps.h5\")\n",
+    "    gen = [\"abl\", \"cnt\"][(int(k.split(\"_f\")[1]) % 2)]\n",
+    "    rel_scores_fish = data[\"rel_scores\"]\n",
+    "    amp_scores = data[\"amp_scores\"]\n",
+    "    in_tectum = data[\"in_tectum\"]\n",
+    "\n",
+    "    n_cells = rel_scores_fish.shape[1]\n",
+    "    n_stims = rel_scores_fish.shape[0]\n",
+    "\n",
+    "    reord_rel = center_on_peak(rel_scores_fish)\n",
+    "    reord_amp = center_on_peak(amp_scores)\n",
+    "\n",
+    "    df = pd.DataFrame(np.concatenate([rel_scores_fish, amp_scores, reord_rel, reord_amp], 0).T, \n",
+    "                      columns=[f\"rel_{i}\" for i in range(n_stims)] + \n",
+    "                              [f\"amp_{i}\" for i in range(n_stims)] + \n",
+    "                              [f\"rel_reord_{i}\" for i in range(n_stims)] + \n",
+    "                              [f\"amp_reord_{i}\" for i in range(n_stims)])\n",
+    "    df[\"cid\"] = [f\"{k}_{i:05.0f}\" for i in range(n_cells)]\n",
+    "    df[\"gen\"] = gen\n",
+    "    df[\"fid\"] = k\n",
+    "    df[\"in_tectum\"] = in_tectum\n",
+    "\n",
+    "    df[\"max_rel\"] = np.nanmax(rel_scores_fish, 0)\n",
+    "    df[\"max_rel_i\"] = np.argmax(rel_scores_fish, 0)\n",
+    "    df[\"max_amp\"] = np.nanmax(amp_scores, 0)\n",
+    "    df[\"max_amp_i\"] = np.argmax(amp_scores, 0)\n",
+    "\n",
+    "    exp_df.append(dict(fid=k,\n",
+    "                gen=gen,\n",
+    "                n_cells=n_cells,\n",
+    "                n_cells_tectum=sum(in_tectum),\n",
+    "                above_rel_thr=np.sum(np.max(rel_scores_fish[:, in_tectum], 0) > REL_SCORE_THR),\n",
+    "                above_rel_thr_all=np.sum(np.max(rel_scores_fish, 0) > REL_SCORE_THR)))\n",
+    "    df_list.append(df)\n",
+    "    \n",
+    "full_df = pd.concat(df_list, axis=0)\n",
+    "full_df = full_df.set_index(full_df[\"cid\"])\n",
+    "\n",
+    "# Exclude bad fish:\n",
+    "\n",
+    "exp_df = pd.DataFrame(exp_df)\n",
+    "exp_df = exp_df.set_index(\"fid\")\n",
+    "exp_df[\"mn_amplitude\"] = full_df.loc[full_df[\"in_tectum\"] & \\\n",
+    "                                     full_df[\"max_rel\"] > REL_SCORE_THR, :].groupby(\"fid\").mean()[\"max_amp\"]"
    ]
   },
   {
@@ -215,7 +405,7 @@
     "from scipy.optimize import curve_fit\n",
     "\n",
     "x = np.arange(36)\n",
-    "y_single_neuron = full_df.loc[(full_df[\"gen\"]==\"MTZ-cnt\") & (full_df[\"max_rel\"] > 0.9), \n",
+    "y_single_neuron = full_df.loc[(full_df[\"gen\"]==\"cnt\") & (full_df[\"max_rel\"] > 0.9), \n",
     "                       [f\"rel_reord_{i}\" for i in range(36)]].values[0, :]\n",
     "\n",
     "mean = sum(x * y_single_neuron) / sum(y_single_neuron)\n",
@@ -227,7 +417,7 @@
     "popt_singleneuron, pcov = curve_fit(gaussian, x, y_single_neuron, \n",
     "                                    p0=[max(y_single_neuron), mean, sigma])\n",
     "\n",
-    "popt = fl.load(master_path / \"gaussian_fit.h5\", \"/popt\")\n",
+    "popt = fl.load(\"fit.h5\", \"/popt\")\n",
     "\n",
     "fit_params = np.array(popt)\n",
     "\n",
@@ -450,10 +640,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def _shift_90_deg(array):\n",
-    "    out = array + np.pi/2\n",
-    "    out[out > np.pi] = -np.pi + np.mod(out[out > np.pi], np.pi)\n",
-    "    return out\n"
+    "all_coords[filt, 1]"
    ]
   },
   {
@@ -462,40 +649,105 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig_c = plt.figure(figsize=(6.5, 3))\n",
-    "m_xpos, m_ypos, xside, yside = 0.05, 0.1, 0.7, 0.7\n",
-    "anat_scatt_size=1\n",
+    "plt.figure()\n",
+    "plt.scatter(all_coords[:, 1], all_coords[:, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "{\"210611_f2\": (366, 202),\n",
+    " \"210611_f3\": (363, 197),\n",
+    " \"210611_f4\": (399, 299),\n",
+    " \"210611_f5\": (313, 160),\n",
+    " \"210611_f15\": (360, 177),\n",
+    " \"210621_f1\": (370, 176),\n",
+    " \"210621_f2\": (380, 162),\n",
+    " \"210621_f3\": (,),\n",
+    " \"210621_f4\": (,),\n",
+    " \"210621_f10\": (,),\n",
+    " \"210621_f11\": (,),\n",
+    " \"210621_f13\": (,),\n",
+    " \"210621_f14\": (,),\n",
+    " \"210621_f20\": (,),\n",
+    " \"210621_f21\": (,),\n",
+    " \"210621_f22\": (,),\n",
+    " \"210624_f0\": (,),\n",
+    " \"210624_f1\": (,),\n",
+    " \"210624_f3\": (,),\n",
+    " \"210624_f4\": (,),\n",
+    " \"210624_f5\": (,),\n",
+    " \"210624_f11\": (,),\n",
+    " \"210624_f14\": (,)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _shift_90_deg(array):\n",
+    "    out = array + np.pi/2\n",
+    "    out[out > np.pi] = -np.pi + np.mod(out[out > np.pi], np.pi)\n",
+    "    return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig_c = plt.figure(figsize=(7.5, 3))\n",
+    "m_xpos, m_ypos, xside, yside = 0.2, 0.1, 0.5, 0.7\n",
+    "anat_scatt_size=3\n",
     "\n",
-    "all_axs = [fig_c.add_axes((m_xpos + 0.5*i*xside, m_ypos, \n",
+    "all_axs = [fig_c.add_axes((m_xpos + 0.65*i*xside, m_ypos, \n",
     "                        xside, yside)) for i in range(2)]\n",
+    "# all_axs = [all_axs_top, all_axs_bot]\n",
     "\n",
     "spacing = 300\n",
     "for g_i, g in enumerate([\"MTZ-cnt\", \"OPC-abl\"]):\n",
     "    axs = all_axs[g_i]\n",
-    "    filt = responsive & all_in_tectum & (pooled_data[\"gen\"] == g)\n",
-    "    axs.scatter(all_coords[filt, 1], all_coords[filt, 2], \n",
-    "                c=_shift_90_deg(stim_thetas[all_peaks[filt]]), \n",
-    "                cmap=\"twilight_shifted\", s=anat_scatt_size)\n",
+    "    for i in sorted(np.unique(all_coords[:, 0])):\n",
+    "        filt = responsive & all_in_tectum & (all_coords[:, 0] == i) & (pooled_data[\"gen\"] == g)\n",
+    "        axs.scatter(all_coords[filt, 1], all_coords[filt, 2], \n",
+    "                    c=_shift_90_deg(stim_thetas[all_peaks[filt]]), \n",
+    "                    cmap=\"twilight_shifted\", s=anat_scatt_size)\n",
     "    axs.set_aspect('equal', adjustable='box')\n",
+    "    # axs[0].set(xlim=(-20, 760), ylim=(0, 460))\n",
+    "\n",
+    "    # axs[0].axis(\"off\")\n",
+    "    # axs.text(351, 450, g, fontsize=8, va=\"bottom\", ha=\"center\")\n",
     "    axs.set_title(g)\n",
     "    despine(axs, sides=\"all\")\n",
     "\n",
-    "    filt = responsive & all_in_tectum & (pooled_data[\"gen\"] == g) \n",
-    "    axs.scatter(all_coords[filt, 1], all_coords[filt, 0] - spacing + np.random.rand(sum(filt))*14, \n",
-    "                c=_shift_90_deg(stim_thetas[all_peaks[filt]]), \n",
-    "                cmap=\"twilight_shifted\", s=anat_scatt_size)\n",
-    "\n",
+    "    for i in range(12, 0, -1):\n",
+    "        filt = responsive & all_in_tectum & (pooled_data[\"gen\"] == g) & \\\n",
+    "                    (all_coords[:, 2] > i*50) & (all_coords[:, 2] < (i+1)*50)\n",
+    "        axs.scatter(all_coords[filt, 1], all_coords[filt, 0] - spacing + np.random.rand(sum(filt))*14, \n",
+    "                    c=_shift_90_deg(stim_thetas[all_peaks[filt]]), \n",
+    "                    cmap=\"twilight_shifted\", s=anat_scatt_size)\n",
+    "    # axs[0].set(xlim=(-20, 760))# , ylim=(0, 460))\n",
+    "    # axs[1].axis(\"off\")\n",
+    "    \n",
+    "    # if g_i == 1:\n",
     "    b_len = 100\n",
-    "    bar_pos_x = -260\n",
+    "    bar_pos_x = -100\n",
+    "    print(g_i)\n",
     "    if g_i == 0:\n",
     "        print(g_i)\n",
-    "        for labels, bar_pos_y in zip([[\"caud-rost\", \"l-r\"], [\"vent-dors\", \"l-r\"]], [100, 100 - spacing]):\n",
+    "        for labels, bar_pos_y in zip([[\"caud-rost\", \"l-r\"], [\"vent-dors\", \"l-r\"]], [200, 200 - spacing]):\n",
     "            axs.plot([bar_pos_x, bar_pos_x, bar_pos_x+b_len], \n",
     "                  [bar_pos_y-b_len, bar_pos_y, bar_pos_y], lw=0.5, c=(0.3,)*3)\n",
     "            axs.text(bar_pos_x, bar_pos_y - b_len/2, labels[0], ha=\"right\", va=\"center\", \n",
     "                       rotation='vertical', fontsize=8)\n",
     "            axs.text(bar_pos_x + b_len/2, bar_pos_y + 10, labels[1], ha=\"center\", va=\"bottom\", fontsize=8)\n",
-    "    axs.set(xlim=(-280, 280), ylim=(-400, 150))\n",
+    "    axs.set(xlim=(-120, 600))# , ylim=(0, 460))\n",
     "val_range = np.linspace(-np.pi, np.pi, 100)\n",
     "axs = fig_c.add_axes((0., 0.35, 0.25, 0.25))\n",
     "axs.imshow(_shift_90_deg(np.angle(val_range[:,None] + 1j*val_range[None,:]).T), \n",
@@ -503,7 +755,7 @@
     "axs.text(0.5,1.05, \"stim. θ\", fontsize=7, va=\"bottom\", ha=\"center\")\n",
     "axs.axis(\"equal\")\n",
     "axs.axis(\"off\")\n",
-    "add_fish(axs, offset=[0.45, 0.0], scale=1.7)\n"
+    "add_fish(axs, offset=[0.45, 0.0], scale=1.7)"
    ]
   },
   {
@@ -522,18 +774,17 @@
     "HIST_FIG_SIZE = (4., 3)\n",
     "group_colors = [(0.4,)*3, cols[2]]\n",
     "\n",
-    "groups = [\"MTZ-cnt\", \"OPC-abl\"]\n",
     "def hist_and_scatter(fig, hist_key, hist_range=None, hist_label=None, scatter_key=None,\n",
     "                    scatter_coef=1, scatter_label=None):\n",
     "    SCAT_DISP = 50  # scatter dispersion\n",
     "    hist_box = (0.1, 0.25, 0.4, 0.5)\n",
-    "    scat_box = (0.7, 0.25, 0.25, 0.5)\n",
+    "    scat_box = (0.75, 0.25, 0.2, 0.5)\n",
     "    p_val_size = 8\n",
     "    \n",
     "    axs = fig.add_axes(hist_box)\n",
     "    \n",
     "    rel_histograms = dict()\n",
-    "    for i, g in enumerate(groups):\n",
+    "    for i, g in enumerate([\"cnt\", \"abl\"]):\n",
     "        sel_fids = full_df.loc[full_df[\"gen\"]==g, \"fid\"].unique()\n",
     "        all_hists = []\n",
     "        for f in sel_fids:\n",
@@ -551,12 +802,12 @@
     "    despine(axs)\n",
     "\n",
     "    scat_axs = fig.add_axes(scat_box)\n",
-    "    for i, g in enumerate(groups):\n",
+    "    for i, g in enumerate([\"cnt\", \"abl\"]):\n",
     "        sel = exp_df.loc[exp_df[\"gen\"] == g, scatter_key]\n",
     "        scat_axs.scatter(np.random.randn(len(sel))/SCAT_DISP+i, sel*scatter_coef, \n",
     "                        c=group_colors[i], s=8)\n",
-    "    diff_p = ranksums(*[exp_df.loc[exp_df[\"gen\"] == g, scatter_key] for g in groups])\n",
-    "    scat_axs.set(xlim=[-0.5, 1.5], xticks=[0, 1], xticklabels=groups, \n",
+    "    diff_p = ranksums(*[exp_df.loc[exp_df[\"gen\"] == g, scatter_key] for g in [\"cnt\", \"abl\"]])\n",
+    "    scat_axs.set(xlim=[-0.5, 1.5], xticks=[0, 1], xticklabels=[\"cnt\", \"abl\"], \n",
     "            ylabel=scatter_label)\n",
     "    \n",
     "    print(f\"p={diff_p.pvalue:0.4f}\")\n",
@@ -568,7 +819,7 @@
     "    if diff_p.pvalue < 0.001:\n",
     "        pval = \"***\"\n",
     "    pval_pos = np.percentile(exp_df.loc[:, scatter_key]*scatter_coef, 75)\n",
-    "    scat_axs.text(0.5, pval_pos, pval, fontsize=p_val_size, ha=\"center\") # f\"p={diff_p.pvalue:0.4f}\"\n",
+    "    scat_axs.text(0.5, 0.800, pval, fontsize=p_val_size, ha=\"center\") # f\"p={diff_p.pvalue:0.4f}\"\n",
     "    despine(scat_axs)\n",
     "    \n",
     "    return axs, scat_axs\n",
@@ -576,7 +827,7 @@
     "fig_d = plt.figure(figsize=HIST_FIG_SIZE)\n",
     "axs, scat_axs = hist_and_scatter(fig_d, hist_key=\"max_rel\", hist_range=np.arange(0, 1, 0.02), \n",
     "                 hist_label=\"reliability score\", scatter_key=\"above_rel_thr\", \n",
-    "                 scatter_coef=1, scatter_label=\"responsive rois (thous.)\",\n",
+    "                 scatter_coef=1/1000, scatter_label=\"responsive rois (thous.)\",\n",
     "                 )\n",
     "axs.axvline(0.5, lw=0.5, c=(0.4,)*3)"
    ]
