--- a/ot_imaging_analysis/v04- pool all data.ipynb
+++ b/ot_imaging_analysis/v04- pool all data.ipynb
@@ -41,8 +41,7 @@
     "master_path = Path(\"/Volumes/Shared/experiments/E0070_receptive_field/v04_flashing_rad_simple\")\n",
     "\n",
     "\n",
-    "path_list = [f.parent for f in master_path.glob(\"*/data_from_suite2p_unfiltered.h5\")]\n",
-    "path_list"
+    "path_list = [f.parent for f in master_path.glob(\"*/data_from_suite2p_unfiltered.h5\")]"
    ]
   },
   {
@@ -64,9 +63,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load traces and experiment metadata:\n",
+    "# Windows for stimulus cropping for reliability index, \n",
+    "# padding with pre- and post- pause:\n",
+    "PRE_INT_S = 2\n",
+    "POST_INT_S = 6\n",
     "\n",
-    "for path in tqdm(path_list[21:]):\n",
+    "# Windows for computing the average response:\n",
+    "BASELINE_START = -2\n",
+    "BASELINE_END = 0\n",
+    "RESP_START = 0\n",
+    "RESP_END = 4\n",
+    "\n",
+    "for path in tqdm(path_list):\n",
+    "    # Load traces and experiment metadata:\n",
     "    traces = fl.load(path / \"data_from_suite2p_unfiltered.h5\", \"/traces\").T\n",
     "    coords = fl.load(path / \"data_from_suite2p_unfiltered.h5\", \"/coords\")\n",
     "    mask = fl.load(path / \"anatomy.mask\", \"/mask\")\n",
@@ -89,8 +98,6 @@
     "\n",
     "    # Crop around stimuli:\n",
     "    n_cells = traces.shape[1]\n",
-    "    PRE_INT_S = 2\n",
-    "    POST_INT_S = 5\n",
     "    cropped = crop(traces, stim_df[\"t\"]*fs, \n",
     "                         pre_int=int(PRE_INT_S*fs), post_int=int(POST_INT_S*fs))\n",
     "    cropped = cropped - cropped[:int(PRE_INT_S*fs), :, :].mean(0)\n",
@@ -111,6 +118,31 @@
     "    fl.save(path / \"cell_resps.h5\", dict(rel_scores=rel_scores, \n",
     "                                         in_tectum=in_tectum,\n",
     "                                         amp_scores=amp_scores))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "im_meta = exp[\"imaging\"][\"microscope_config\"][\"lightsheet\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "im_meta[\"scanning\"][\"triggering\"]"
    ]
   },
   {
